assets/css/02-katex.css
/* ... */
.katex .eqn-num::before {
	content: "(" counter(katexEqnNo) ")";
	counter-increment: katexEqnNo;
}

.katex .mml-eqn-num::before {
	content: "(" counter(mmlEqnNo) ")";
	counter-increment: mmlEqnNo;
}

.katex .mtr-glue {
	width: 50%;
}

.katex .cd-vert-arrow {
	display: inline-block;
	position: relative;
}

.katex .cd-label-left {
	display: inline-block;
	position: absolute;
	right: calc(50% + .3em);
	text-align: left;
}

.katex .cd-label-right {
	display: inline-block;
	left: calc(50% + .3em);
	position: absolute;
	text-align: right;
}

.katex-display {
	display: block;
	margin: 1em 0;
	text-align: center;
}

.katex-display > .katex {
	display: block;
	text-align: center;
	white-space: nowrap;
}

.katex-display > .katex > .katex-html {
	display: block;
	position: relative;
}

.katex-display > .katex > .katex-html > .tag {
	position: absolute;
	right: 0;
}

.katex-display.leqno > .katex > .katex-html > .tag {
	left: 0;
	right: auto;
}

.katex-display.fleqn > .katex {
	padding-left: 2em;
	text-align: left;
}

body {
	counter-reset: katexEqnNo mmlEqnNo;
}
/* === Prevent line breaks inside KaTeX math === */
.katex,
.katex * {
  white-space: nowrap !important;
  word-break: normal !important;
  overflow-wrap: normal !important;
  hyphens: none !important;
}

/* Display equations: keep them intact, scroll if too wide */
.katex-display {
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
}

.katex-display > .katex {
  display: inline-block;   /* keep the whole formula together */
  white-space: nowrap !important;
}

